# AIDbChecker

./: .env.example  .gitignore  AGENTS.md  AI_DB_Monitor_Competitive_Analysis.md  AI_DB_Monitoring_System_PRD_v3.3.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  ai-db-monitor-architecture-spec-v3.md  ai-db-monitor-license-audit.jsx  ai-db-monitor-v3-final.jsx
.claude/: settings.json  settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py  base.py
backend/app/adapters/postgresql/: __init__.py  remote.py
backend/app/agents/: __init__.py  action_memory.py  copilot_agent.py  dba_agent.py  execution_engine.py  llm_retry.py  native_tool_agent.py  proactive_agent.py  query_simulator.py  safety_guard.py  tuning_agent.py
backend/app/agents/tools/: __init__.py  db_tools.py  ops_tools.py
backend/app/analyzers/: __init__.py  anomaly.py  baseline.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  alerts.py  ash.py  audit.py  auth.py  baselines.py  copilot.py  dba.py  graph.py  incidents.py  instances.py  kpi.py  llm_observability.py  llm_settings.py  metrics.py  mtl.py  nl2sql.py  playbooks.py  rag.py  reports.py  schema_changes.py  slack_settings.py  system.py  tasks.py  tuning.py  users.py
backend/app/db/: base.py  seed.py  seed_demo.py  session.py
backend/app/mcp/: __init__.py  server.py
backend/app/middleware/: __init__.py  audit.py  error_handler.py  rate_limit.py
backend/app/models/: __init__.py  active_session.py  alert_channel.py  alert_history.py  alert_policy.py  audit_log.py  baseline.py  db_instance.py  dba_report.py  graph_edge.py  graph_node.py  incident.py  metric.py  nl2sql_history.py  rag_document.py  schema_change.py  system_setting.py  user.py
backend/app/schemas/: __init__.py  ash.py  audit.py  baseline.py  copilot.py  dba.py  error.py  graph.py  incident.py  instance.py  kpi.py  llm_observability.py  llm_settings.py  metric.py  mtl.py  nl2sql.py  playbook.py  rag.py  report.py  schema_change.py  task_queue.py  tuning.py  user.py
backend/app/services/: __init__.py  autonomy_manager.py  dba_report.py  graph_rag.py  kpi_calculator.py  llm_observability.py  llm_provider.py  mtl_lite.py  nl2sql.py  pdf_report.py  playbook_executor.py  rag.py  report_generator.py  schema_detector.py  session_memory.py  settings_store.py  slack.py  sso.py  task_queue.py
backend/app/tasks/: __init__.py  alert.py  analyze.py  collect.py  proactive.py  report.py  reports.py  schema.py
backend/app/utils/: __init__.py  ai_logger.py  bcrypt_patch.py  dsn.py  encryption.py  react_trace.py
backend/app/websocket/: __init__.py  events.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_graph_tables.py  003_agent_actions.py  004_phase2_tables.py  005_system_settings.py  006_dba_reports.py
backend/playbooks/builtin/: connection-pool.yaml  index-optimization.yaml  lock-remediation.yaml  memory-pressure.yaml  query-timeout.yaml  replication-lag.yaml  vacuum-maintenance.yaml
backend/scripts/: __init__.py  gen_spec_tests.py  precommit_check.sh  spec_dashboard.py  spec_parser.py  validate_spec.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  conftest.py  test_api_workflow.py  test_db_tables.py
backend/tests/unit/: conftest.py  test__spec.py  test_admin_002_sso_spec.py  test_admin_003_spec.py  test_admin_004_decision_log_spec.py  test_admin_004_spec.py  test_ai_001_baseline_spec.py  test_ai_001_spec.py  test_ai_005_spec.py  test_ai_006_explain_spec.py  test_ai_010_spec.py  test_ai_011_spec.py  test_ai_012_spec.py  test_ai_013_spec.py  test_ai_llm_001_spec.py  test_ai_nl2sql_001_spec.py  test_ai_rag_001_spec.py  test_ai_report_001_spec.py  test_ai_report_002_spec.py  test_anomaly_detector.py  test_api_err_001_error_handler.py  test_api_err_001_spec.py  test_audit_api.py  test_auth.py  test_auto_002_autonomy_spec.py  test_auto_002_spec.py  test_auto_003_playbook_spec.py  test_auto_003_spec.py  test_auto_004_spec.py  test_auto_004_task_queue_spec.py  test_auto_005_downgrade_spec.py  test_baseline_analyzer.py  test_baselines_api.py  test_cfg_001_spec.py  test_dash_004_spec.py  test_dba_001_spec.py  test_dba_002_spec.py  test_dba_003_spec.py  test_dba_004_multiturn_spec.py  test_dba_005_native_tool_spec.py  (+18 more)
docs/: FRONTEND_DESIGN.md  GLOSSARY.md  MVP.md  MVP_UI_REFERENCE.md  NeuralDB_소개.md  OPERATIONS_GUIDE.md  RETRO_v1.3.md  TECH_STACK.md  UI_UX_PLAN.md  USECASES.md  screen1_topology.html  screen2_selfhealing.html  screen3_ash.html  screen4_diagnosis.html  screen5_topology_explorer.html  screen6_add_database.html  screen7_diagnosis_flow.html
docs/ADR/: 001-fastapi-over-nestjs.md  002-postgresql16-unified.md  003-valkey-over-redis.md  004-uv-over-pip.md  005-react-spa-over-nextjs.md  006-hybrid-adapter-collection.md  007-credential-encryption.md  008-lightweight-playbook-hybrid.md  009-langchain-langgraph-framework.md  010-graphrag-integration.md  011-remove-kafka.md
docs/etc/: CODE_POLISH_ROADMAP.md  DB 핵심 성능지표.txt  DBA Agent 기능.txt  DEMO_GUIDE.md  NL2GraphRAG.txt  Report_기능요구사항_정리_260325.txt
docs/review/: 001-adapter-vs-agent-collection.md
docs/specs/: SPEC_TEMPLATE.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  dba-agent.spec.ts  reports.spec.ts  settings.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/tests/: setup.ts
infra/docker/: Dockerfile.frontend  docker-compose.yml  nginx.conf
infra/postgres/: init.sql
scripts/: e2e_docker.sh
skills/gen-component/: SKILL.md
skills/gen-docker/: SKILL.md
skills/gen-echarts/: SKILL.md
skills/gen-mcp-tool/: SKILL.md
skills/gen-playbook/: SKILL.md
skills/gen-rag-pipeline/: SKILL.md
skills/gen-react-hook/: SKILL.md
skills/gen-sqlalchemy-model/: SKILL.md
skills/gen-test/: SKILL.md
(+130 files in other folders)
