[project]
name = "neuraldb-backend"
version = "0.1.0"
description = "NeuralDB — AI-Powered Intelligent DB Monitoring System"
requires-python = ">=3.11"
dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Cache / Broker
    "redis>=5.0.0",
    # Task Queue
    "celery[redis]>=5.4.0",
    # WebSocket
    "python-socketio>=5.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    # HTTP Client
    "httpx>=0.27.0",
    # AI/ML
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "sentence-transformers>=3.0.0",
    # Notifications
    "slack-sdk>=3.0.0",
    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Encryption
    "cryptography>=42.0.0",
    # Logging
    "structlog>=24.0.0",
    # Vector (pgvector)
    "pgvector>=0.3.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx",  # TestClient
    "aiosqlite>=0.20.0",  # SQLite async driver for tests
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
