[project]
name = "neuraldb-backend"
version = "0.1.0"
description = "NeuralDB — AI-Powered Intelligent DB Monitoring System"
requires-python = ">=3.11"
dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    # Cache / Broker
    "redis>=5.0.0",
    # Task Queue
    "celery[redis]>=5.4.0",
    # WebSocket
    "python-socketio>=5.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    # HTTP Client
    "httpx>=0.27.0",
    # AI/ML
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "sentence-transformers>=3.0.0",
    # Notifications
    "slack-sdk>=3.0.0",
    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Encryption
    "cryptography>=42.0.0",
    # Logging
    "structlog>=24.0.0",
    # Vector (pgvector)
    "pgvector>=0.3.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx",  # TestClient
    "aiosqlite>=0.20.0",  # SQLite async driver for tests
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = [
    "B008",   # FastAPI Depends() in argument defaults is by design
    "B904",   # raise-without-from: HTTPException re-raise pattern is intentional
    "E501",   # line-too-long: handled by ruff format, remaining are strings/comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B007"]  # unused loop variable in parameterized tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
# Pragmatic strict: relax rules that conflict with SQLAlchemy/LangChain/Celery
disallow_any_generics = false      # dict without [K,V] (JSONB returns dict)
warn_return_any = false             # LangChain/SQLAlchemy return Any
disallow_untyped_calls = false      # redis, celery untyped
disallow_untyped_defs = false       # Celery tasks, Depends patterns

[[tool.mypy.overrides]]
module = ["app.tasks.*", "app.mcp.*"]
ignore_errors = true                # Celery/MCP have heavy untyped deps

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
